[ 12/29/24 ]
- Initial Launch

WARNING: As always with this mod, a fresh game is recommended for best results.
Items that get their type changed are deleted upon mod deactivation/activation.
[ ------ ]

[ 12/30/24 ]
- New Poster
[ ------ ]

[ 12/30/24 #2 ]
- Removed gun magazines as weapon candidates.
[ ------ ]

[ 12/30/24 ]
- Refactored models to rely on Static/WorldStatic if no WeaponSprite is provided.
- Added test suite module - to use with in-line command tool in debug.
- Various Tweaks.
[ ------ ]

[ 1/6/25 ]
- Fixed issues with car parts receiving significantly lowered condition.
[ ------ ]

[ 1/6/25 #2 ]
- Forgot to apply the fix to mufflers.
[ ------ ]

[ ALERT_CONFIG ]
link1 = Chuck's Kofi = https://steamcommunity.com/linkfilter/?u=https://ko-fi.com/chuckleberryfinn,
link2 = Workshop = https://steamcommunity.com/id/Chuckleberry_Finn/myworkshopfiles/?appid=108600,
link3 = Github = https://steamcommunity.com/linkfilter/?u=https://github.com/Chuckleberry-Finn,
[ ------ ]