@@ -32,3 +32,7 @@ link1 = Chuck's Kofi = https://steamcommunity.com/linkfilter/?u=https://ko-fi.co
 link2 = Workshop = https://steamcommunity.com/id/Chuckleberry_Finn/myworkshopfiles/?appid=108600,
 link3 = Github = https://steamcommunity.com/linkfilter/?u=https://github.com/Chuckleberry-Finn,
 [ ------ ]
+
+[ 1/21/25 ]
+- Changed lightbulbs to handle having a larger conditionMax.
+[ ------ ]
